-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.6.0, Lustre 2.5.2
-
3
-
13196
There is a bug at the end of server_put_mount() calling server_deregister_mount() even if this isn't the last reference.
Fixing this would probably remove the need for server_
{get,put}_mount_2(). These functions could be removed and the one caller of server_get_mount_2() could be changed to call server_get_mount() and server_put_mount() at the end.
- is related to
-
LU-137 ioctl passthrough mechanism for Lustre OST/MDT mountpoints
-
- Resolved
-