lustre/mdt/mdt_handler.c
@@ -4389,7 +4389,7 @@ static void mdt_fini(const struct lu_env *env, struct mdt_device *m)
 
 	LASSERT(atomic_read(&d->ld_ref) == 0);
 
-	server_put_mount(mdt_obd_name(m));
+	server_put_mount(mdt_obd_name(m), true);
 
 	EXIT;
 }
@@ -4645,7 +4645,7 @@ err_fini_stack:
 	mdt_stack_fini(env, m, md2lu_dev(m->mdt_child));
 err_lmi:
 	if (lmi)
-		server_put_mount(dev);
+		server_put_mount(dev, true);
 	return(rc);
 }
 
