lustre/ofd/ofd_dev.c
@@ -2293,7 +2293,7 @@ static void ofd_fini(const struct lu_env *env, struct ofd_device *m)
 	ofd_stack_fini(env, m, &m->ofd_dt_dev.dd_lu_dev);
 	ofd_procfs_fini(m);
 	LASSERT(atomic_read(&d->ld_ref) == 0);
-	server_put_mount(obd->obd_name);
+	server_put_mount(obd->obd_name, true);
 	EXIT;
 }
 
